Use proper syntax for GITHUB_OUTPUT

--- a/ci-preflight/action.yml
+++ b/ci-preflight/action.yml
@@ -14,10 +14,10 @@ runs:
       filters: workflow-support/image_files.yml
     if: github.event_name != 'schedule'
   - id: main
-    run: echo "name=image_tag::main" >> $GITHUB_OUTPUT
+    run: echo "image_tag=main" >> $GITHUB_OUTPUT
     shell: bash
     if: (github.event_name != 'pull_request') || (steps.skip_check.outputs.image_files != 'true')
   - id: pr
-    run: echo "name=image_tag::pr${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
+    run: echo "image_tag=pr${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
     shell: bash
     if: (github.event_name == 'pull_request') && (steps.skip_check.outputs.image_files == 'true')
