--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,13 @@ jobs:
   preflight:
     runs-on: ubuntu-20.04
     outputs:
-      versions: ${{ steps.versions.output.versions }}
+      versions: ${{ steps.get_versions.outputs.versions }}
     steps:
     - uses: actions/checkout@v3
-    - id: versions
+    - id: get_versions
       run: cat workflow-support/pdns-versions >> $GITHUB_OUTPUT
+      shell: bash
+    - run: echo ${{ steps.get_versions.outputs.versions }}
       shell: bash
   ci-image:
     runs-on: ubuntu-20.04
