--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - id: get_versions
-      run: cat workflow-support/pdns-versions >> $GITHUB_OUTPUT
+      run: cat workflow-support/pdns-versions.json >> $GITHUB_OUTPUT
       shell: bash
     - run: echo ${{ fromJSON(steps.get_versions.outputs.versions).pdns }}
       shell: bash
