--- a/delete-pr-image/action.yml
+++ b/delete-pr-image/action.yml
@@ -8,10 +8,12 @@ inputs:
     required: true
   repo_name:
     required: true
+  tag_prefix:
+    required: false
 runs:
   using: "composite"
   steps:
   - name: delete image tag (Quay)
-    run: 'curl -s -X DELETE -H "Authorization: Bearer ${{ inputs.registry_token }}" https://quay.io/api/v1/repository/${{ inputs.registry_account }}/${{ inputs.repo_name }}/tag/pr${{ github.event.pull_request.number }}'
+    run: 'curl -s -X DELETE -H "Authorization: Bearer ${{ inputs.registry_token }}" https://quay.io/api/v1/repository/${{ inputs.registry_account }}/${{ inputs.repo_name }}/tag/${{ inputs.tag_prefix }}pr${{ github.event.pull_request.number }}'
     shell: bash
     if: inputs.image_registry == 'quay.io'
