--- a/make-ci-image/action.yml
+++ b/make-ci-image/action.yml
@@ -1,7 +1,9 @@
-name: "Build CI image"
+name: "Make CI Image"
 inputs:
   base_image:
     required: true
+  base_image_hash:
+    required: false
   image_name:
     required: true
   image_registry:
@@ -22,7 +24,7 @@ runs:
     uses: actions/cache@v3
     with:
       path: workflow-support/make_ci_image.sh
-      key: ${{ github.ref_name }}-${{ inputs.files_hash }}
+      key: ${{ github.ref_name }}-${{ inputs.files_hash }}-${{ inputs.base_image_hash }}
   - name: build image
     if: (steps.imagefiles.outputs.cache-hit != 'true') || (github.event_name == 'schedule')
     run: workflow-support/make_ci_image.sh ${{ inputs.base_image }} ${{ inputs.image_name }} ${{ inputs.build_args }}
