--- a/ci-preflight/action.yml
+++ b/ci-preflight/action.yml
@@ -15,6 +15,8 @@ outputs:
     value: ${{ steps.main-need-image.outputs.need_image }}${{ steps.pr-need-image.outputs.need_image }}
   image_tag:
     value: ${{ inputs.tag_prefix }}${{ steps.main-tag.outputs.tag }}${{ steps.pr-tag.outputs.tag }}
+  image_cache_key:
+    value: ${{ steps.main-need-image.outputs.cache_key }}${{ steps.pr-need-image.outputs.cache_key }}
 runs:
   using: "composite"
   steps:
@@ -23,12 +25,12 @@ runs:
     with:
       filters: ${{ inputs.ci_paths }}
   - id: main_cache_check
-    uses: actions/cache@v3
+    uses: actions/cache/restore@v3
     with:
       path: workflow-support/make_ci_image.sh
       key: main-${{ inputs.files_hash }}-${{ inputs.base_image_hash }}
   - id: pr_cache_check
-    uses: actions/cache@v3
+    uses: actions/cache/restore@v3
     with:
       path: workflow-support/make_ci_image.sh
       key: ${{ github.ref_name }}-${{ inputs.files_hash }}-${{ inputs.base_image_hash }}
@@ -42,10 +44,14 @@ runs:
     shell: bash
     if: (github.event_name == 'pull_request') && (steps.main_cache_check.outputs.cache-hit != 'true')
   - id: main-need-image
-    run: echo "need_image=true" >> $GITHUB_OUTPUT
+    run: |
+      echo "need_image=true" >> $GITHUB_OUTPUT
+      echo "cache_key=${{ steps.main_cache_check.outputs.key }}" >> $GITHUB_OUTPUT
     shell: bash
     if: (github.event_name == 'schedule') || ((github.event_name != 'pull_request') && (steps.main_cache_check.outputs.cache-hit != 'true'))
   - id: pr-need-image
-    run: echo "need_image=true" >> $GITHUB_OUTPUT
+    run: |
+      echo "need_image=true" >> $GITHUB_OUTPUT
+      echo "cache_key=${{ steps.pr_cache_check.outputs.key }}" >> $GITHUB_OUTPUT
     shell: bash
     if: (github.event_name == 'pull_request') && (steps.pr-tag.outputs.tag != '') && (steps.pr_cache_check.outputs.cache-hit != 'true')
