Additional protection to keep delete-pr-image from causing issues in fork repositories.
Closes #1.

--- a/delete-pr-image/action.yml
+++ b/delete-pr-image/action.yml
@@ -16,4 +16,4 @@ runs:
   - name: delete image tag (Quay)
     run: 'curl -s -X DELETE -H "Authorization: Bearer ${{ inputs.registry_token }}" https://quay.io/api/v1/repository/${{ inputs.registry_account }}/${{ inputs.repo_name }}/tag/${{ inputs.tag_prefix }}pr${{ github.event.pull_request.number }}'
     shell: bash
-    if: inputs.image_registry == 'quay.io'
+    if: (inputs.image_registry == 'quay.io') && (inputs.registry_token != '')
